Added add tax button

--- a/src/app/total-after-tax/total-after-tax.component.html
+++ b/src/app/total-after-tax/total-after-tax.component.html
@@ -1,1 +1,13 @@
-<p>total-after-tax works!</p>
+<mat-card>
+    <mat-card-title>
+        Austin's Tax Component
+    </mat-card-title>
+    <mat-card-content>
+        <button
+            mat-basic
+            (click)="addTax()"
+        >
+            Add Tax
+        </button>
+    </mat-card-content>
+</mat-card>
