Changed to comment component
import mat controls

--- a/src/app/total-after-tax/total-after-tax.component.html
+++ b/src/app/total-after-tax/total-after-tax.component.html
@@ -1,13 +1,8 @@
 <mat-card>
     <mat-card-title>
-        Austin's Tax Component
+        Austin's Division Component
     </mat-card-title>
     <mat-card-content>
-        <button
-            mat-basic
-            (click)="addTax()"
-        >
-            Add Tax
-        </button>
+      
     </mat-card-content>
 </mat-card>
