Fixed (click) handler

--- a/src/app/total-after-tax/total-after-tax.component.html
+++ b/src/app/total-after-tax/total-after-tax.component.html
@@ -26,7 +26,7 @@
         <button
             mat-raised-button
             color="primary"
-            click="commentsSubmitted()"
+            (click)="commentsSubmitted()"
         >
             Submit Comments!
         </button>
