Tweeked load button apperance

--- a/src/app/ast-loading/ast-loading.component.html
+++ b/src/app/ast-loading/ast-loading.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button (click) = "toggleLoading()">Loading</button>
+    <button mat-mini-fab (click) = "toggleLoading()">Load</button>
     <div *ngIf = "showLoading">
         <h3>Loading... Please wait.</h3>
         <img src="/assets/img/This_old_loading_screen.gif" alt="loading gif">
