Changed out div for mat-card

--- a/src/app/ast-loading/ast-loading.component.html
+++ b/src/app/ast-loading/ast-loading.component.html
@@ -1,7 +1,7 @@
-<div>
+<mat-card>
     <button mat-mini-fab (click) = "toggleLoading()">Load</button>
     <div *ngIf = "showLoading">
         <h3>Loading... Please wait.</h3>
         <img src="/assets/img/This_old_loading_screen.gif" alt="loading gif">
     </div>
-</div>
+</mat-card>
