Moved personal app to top

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-ast-loading></app-ast-loading>
 <app-pizza-toppings></app-pizza-toppings>
 <app-tjs-multiplication></app-tjs-multiplication>
 <app-sw-team-check></app-sw-team-check>
